--- a/packages/discovery-styles/scss/components/example-component/_example-component.scss
+++ b/packages/discovery-styles/scss/components/example-component/_example-component.scss
@@ -1,6 +1,6 @@
-/* add css styles here (optional) */
+@import '~carbon-components/scss/globals/scss/vars';
 
-.test {
+.#{$prefix}--example-component {
   display: inline-block;
   margin: 2em auto;
   border: 2px solid #000;
