--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -1,3 +1,5 @@
 $css--plex: true !default;
 
 @import 'components/example-component/example-component';
+
+@import 'carbon-components/scss/components/pagination/_pagination.scss';
