--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -2,4 +2,4 @@ $css--plex: true !default;
 
 @import 'components/example-component/example-component';
 
-@import 'carbon-components/scss/components/pagination/_pagination.scss';
+@import 'components/results-pagination/results-pagination';
