Add in Carbon styles for SearchRefinements component in discovery-styles

--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -3,3 +3,5 @@ $css--plex: true !default;
 @import 'components/example-component/example-component';
 
 @import 'components/results-pagination/results-pagination';
+
+@import 'components/search-refinements/search-refinements';
