--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -5,6 +5,7 @@ $css--plex: true !default;
 @import 'components/search-input/search-input';
 @import 'components/search-refinements/search-refinements';
 @import 'components/results-pagination/results-pagination';
+@import 'components/rich-preview/rich-preview';
 
 // Global styles
 @import '~carbon-components/scss/globals/scss/_css--font-face.scss';
