--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -6,6 +6,7 @@ $css--plex: true !default;
 @import 'components/search-refinements/search-refinements';
 @import 'components/results-pagination/results-pagination';
 @import 'components/rich-preview/rich-preview';
+@import 'components/search-results/search-results';
 
 // Global styles
 @import '~carbon-components/scss/globals/scss/_css--font-face.scss';
