feat: integrate rich preview toolbar (#165)
* fix: don't format on save for SCSS

* feat: add toolbar to RichPreview

* fix: require `document` prop, cleanup tests/stories

* feat: calculate page count

* fix: pass document data to RichPreview in example

--- a/packages/discovery-styles/scss/components/rich-preview/_rich-preview.scss
+++ b/packages/discovery-styles/scss/components/rich-preview/_rich-preview.scss
@@ -9,6 +9,10 @@
   position: relative;
 }
 
+.#{$prefix}--rich-preview__document > * {
+  width: 100%;
+}
+
 .#{$prefix}--rich-preview__passage {
   position: absolute;
   top: 0;
