feat: Auto complete basic (#147)
* committing initial changes

* added autocompletion endpoint to server.js

* completions state in DiscoverySearch

* populate handleUpdateSearchQuery

* query fields -> prefixes -- example autocomplete list

* populate completions list with actual completions

* autocomplete suggestions update the search query

* only get completions for the last word

* committing initial changes

* added autocompletion endpoint to server.js

* completions state in DiscoverySearch

* populate handleUpdateSearchQuery

* query fields -> prefixes -- example autocomplete list

* populate completions list with actual completions

* autocomplete suggestions update the search query

* only get completions for the last word

* Switch to using V2 Autocomplete

* Fix build issue

* skeleton of SearchInput tests

* started unit tests

* Fix console errors and server path.

* removed unnecessary dep for useEffect

* fix bug: don't crash when target is undefined

* Close completions when one is selected

* Set focus back on input when selecting completion

* Add autocomplete story and fix naming convention

* search input tests: typing and clearing input

* completions basic tests

* add new autocomplete test

* add splitSearchQuerySelector prop to SearchInput

* move completions logic to NLQ handler

* remove scrapped prop from test utils

* remove wrapWithContext from stories and remove defaultValue

* small fixes to get storybook working

--- a/packages/discovery-styles/scss/components/search-input/_search-input.scss
+++ b/packages/discovery-styles/scss/components/search-input/_search-input.scss
@@ -1,2 +1,3 @@
 // Component styles
 @import '~carbon-components/scss/components/search/_search.scss';
+@import '~carbon-components/scss/components/list-box/_list-box.scss';
