fix up styles and default props

--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -1,5 +1,9 @@
-@import '~carbon-components/scss/globals/scss/vars';
-
 .#{$prefix}--search-result--selected {
   border-left: 0.3rem solid $interactive-04;
+}
+
+.#{$prefix}--search-result {
+  em {
+    background-color: $support-02;
+  }
 }
