--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -1,8 +1,10 @@
 $css--plex: true !default;
+$css--use-layer: true !default;
 
 // Global styles
 @import '~carbon-components/scss/globals/scss/_css--font-face.scss';
 @import '~carbon-components/scss/globals/scss/_colors.scss';
+@import '~carbon-components/scss/globals/scss/_layer.scss';
 
 // Component styles
 @import 'components/example-component/example-component';
