fix: css import (#192)

--- a/packages/discovery-styles/scss/components/rich-preview/_rich-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/rich-preview/_rich-preview-toolbar.scss
@@ -1,3 +1,6 @@
+@import '~carbon-components/scss/components/button/button';
+@import '~carbon-components/scss/components/tooltip/tooltip';
+
 .#{$prefix}--rp-toolbar {
   display: flex;
   justify-content: center;
