Update the single search result component's background color.

--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -4,6 +4,7 @@
 
 .#{$prefix}--search-result {
   @include layer('overlay');
+  background-color: white;
   padding: $spacing-05;
   margin: $layout-01 0;
   border-radius: rem(6px);
