--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -1,10 +1,9 @@
-.#{$prefix}--search-result_selected {
-  border-left: 0.3rem solid $interactive-04;
-}
+$result-background: white;
 
 .#{$prefix}--search-result {
   @include layer('overlay');
-  background-color: white;
+  border-left: 0.3rem solid $result-background;
+  background-color: $result-background;
   padding: $spacing-05;
   margin: $layout-01 0;
   border-radius: rem(4px);
@@ -18,6 +17,9 @@
   }
 }
 
+.#{$prefix}--search-result_selected {
+  border-left: 0.3rem solid $interactive-04;
+}
 .#{$prefix}--search-result--body {
   max-width: 560px;
   line-height: 1.25;
