--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -7,6 +7,7 @@ $result-background: white;
   padding: $spacing-05;
   margin: $layout-01 0;
   border-radius: rem(4px);
+  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
 
   em {
     color: $text-04;
@@ -20,15 +21,17 @@ $result-background: white;
 .#{$prefix}--search-result_selected {
   border-left: 0.3rem solid $interactive-04;
 }
+
 .#{$prefix}--search-result--body {
   max-width: 560px;
-  line-height: 1.25;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .#{$prefix}--search-result--title {
   padding-top: $spacing-05;
   color: $text-02;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   display: flex;
   align-items: center;
 
