Set the user's cursor to a pointer when hovering over a result.

--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -8,6 +8,7 @@ $result-background: white;
   margin: $layout-01 0;
   border-radius: rem(4px);
   font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
+  cursor: pointer;
 
   em {
     color: $text-04;
