Make use of an existing theme class for the content of a Result component.

--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -34,8 +34,8 @@ $result-background: white;
 
 .#{$prefix}--search-result--body {
   max-width: 560px;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+
+  @include type-style('body-short-01');
 }
 
 .#{$prefix}--search-result--title {
