--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -45,6 +45,8 @@ $result-background: white;
   display: flex;
   align-items: center;
 
+  text-decoration: underline;
+
   svg {
     margin-right: $spacing-03;
   }
