A result's file name now only has an underline on hover.

--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -45,7 +45,9 @@ $result-background: white;
   display: flex;
   align-items: center;
 
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
 
   svg {
     margin-right: $spacing-03;
