Add styling for the SearchRefinements component. (#194)
* Add styling for the SearchRefinements component.

* Add some padding around and a background color to the story for SearchRefinements.

* Hoist the font family declaration from the SearchRefinement component's labels to the parent level refinement class.

* Bring the BEM namespace in from Carbon Components.

* Use carbon-components'  CSS namespace everywhere in `SearchRefinements`

* Swap color variables with theme tokens.

* Swap setting the font size of the refinement option label out with a mixin that uses a theme token. Also removing a `font-family`.

* add dummy client to storybook

--- a/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
+++ b/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
@@ -1,1 +1,19 @@
 @import '~carbon-components/scss/components/checkbox/_checkbox.scss';
+
+.#{$prefix}--refinement {
+  margin-bottom: $spacing-md;
+}
+
+.#{$prefix}--refinement_label {
+  color: $ui-05;
+  font-size: 0.75rem;
+}
+
+.#{$prefix}--form-item.#{$prefix}--checkbox-wrapper.#{$prefix}--refinement-option {
+  margin-bottom: rem(6px);
+}
+
+.#{$prefix}--refinement-option_label {
+  @include type-style('body-short-02');
+  color: $ui-05;
+}
