Add styling for the SearchInput component. (#198)
* Set up CSS classes on the search input's autocomplete elements.

* Add the search icon to each autocomplete entry.

* Remove commented-out code.

* Use a variable for the root of search autocomplete class names.

* Remove unnecessary variable import

* Extract `StoryWrapper` into a util file. This can be modified as needed.

* Using proper BEM syntax for separating blocks from elements.

* Replacing the font family for the autocomplete block with a mixin.

* Using theme tokens where they exist.

* Delete _search-input.scss.rej

--- a/packages/discovery-styles/scss/components/search-input/_search-input.scss
+++ b/packages/discovery-styles/scss/components/search-input/_search-input.scss
@@ -1,3 +1,35 @@
 // Component styles
 @import '~carbon-components/scss/components/search/_search.scss';
 @import '~carbon-components/scss/components/list-box/_list-box.scss';
+
+.#{$prefix}--search-autocomplete {
+  @include layer('overlay');
+  padding: 0 $spacing-md;
+}
+
+.#{$prefix}--search-autocomplete__wrapper {
+  @include type-style('body-short-01');
+  color: $gray-70;
+  border-bottom-color: $ui-03;
+
+  &:last-of-type {
+    border-bottom: none;
+  }
+}
+
+.#{$prefix}--search-autocomplete__item {
+  display: flex;
+  align-items: center;
+}
+
+.#{$prefix}--search-autocomplete__term {
+  padding: $spacing-sm 0 $spacing-md;
+}
+
+.#{$prefix}--search-autocomplete__icon {
+  padding: $spacing-sm $spacing-md $spacing-sm 0;
+
+  svg {
+    fill: $interactive-04;
+  }
+}
