feat: Add ability to filter by collection (#199)
* Add ability to filter by collection

* Address comments

* Add GET /collections cypress figtures

* Properly name things

* Fix busted test

* Learning to spell.....

* I angered lint

* Additional comments

* Rename test/variables

--- a/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
+++ b/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
@@ -1,4 +1,5 @@
 @import '~carbon-components/scss/components/checkbox/_checkbox.scss';
+@import '~carbon-components/scss/components/multi-select/_multi-select.scss';
 
 .#{$prefix}--refinement {
   margin-bottom: $spacing-md;
