feat: search results passage options (#214)
* Add in initial passageLength and passageHighlightsEnabled plus tests; update node sdk passages

* Either can provide className or go with default styling; update testUtils

* Update test describe blocks for clarity

--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -18,7 +18,9 @@ $result-background: white;
   &:last-of-type {
     margin-bottom: 0;
   }
+}
 
+.#{$prefix}--search-result--body__highlight {
   em {
     color: $text-04;
     background-color: $support-02;
