feat: passage hilite 2nd fallback (#242)
* feat: passage highlighting in 2nd fallback

* Revert "feat: passage highlighting in 2nd fallback"

This reverts commit b85b17dc85608c889d37096beeace969727a21f8.

* feat: passage highlighting in 2nd fallback

* refactor: move utility methods to own files

* fix: correctly position field rect

* fix: handle multiple text nodes

* test: add

* fix: calc of text offset; add tests

* test: remove unneeded imports

--- a/packages/discovery-styles/scss/components/rich-preview/_rich-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/rich-preview/_rich-preview-toolbar.scss
@@ -2,6 +2,7 @@
 @import '~carbon-components/scss/components/tooltip/tooltip';
 
 .#{$prefix}--rich-preview-toolbar {
+  flex: 0 0 auto;
   display: flex;
   justify-content: center;
   background-color: #eaeaea;
