--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
@@ -1,7 +1,7 @@
 @import '~carbon-components/scss/components/button/button';
 @import '~carbon-components/scss/components/tooltip/tooltip';
 
-.#{$prefix}--rich-preview-toolbar {
+.#{$prefix}--preview-toolbar {
   flex: 0 0 auto;
   display: flex;
   justify-content: center;
@@ -9,7 +9,7 @@
   height: $spacing-2xl;
 }
 
-.#{$prefix}--rich-preview-toolbar__nav {
+.#{$prefix}--preview-toolbar__nav {
   display: flex;
   flex: 0 1 auto;
   justify-content: center;
@@ -17,12 +17,12 @@
   user-select: none;
 }
 
-.#{$prefix}--rich-preview-toolbar__button {
+.#{$prefix}--preview-toolbar__button {
   padding-left: $spacing-xs !important;
   padding-right: $spacing-xs !important;
 }
 
-.#{$prefix}--rich-preview-toolbar__input {
+.#{$prefix}--preview-toolbar__input {
   text-align: center;
   max-width: $layout-lg;
   height: $spacing-xl;
@@ -40,18 +40,18 @@ input[type='number'] {
   -moz-appearance: textfield;
 }
 
-.#{$prefix}--rich-preview-toolbar__pageLabel {
+.#{$prefix}--preview-toolbar__pageLabel {
   margin: auto;
   padding-left: $spacing-xs;
   padding-right: $spacing-xs;
 }
 
-.#{$prefix}--rich-preview-toolbar__spacer,
-.#{$prefix}--rich-preview-toolbar__zoom {
+.#{$prefix}--preview-toolbar__spacer,
+.#{$prefix}--preview-toolbar__zoom {
   flex: 1 1 auto;
 }
 
-.#{$prefix}--rich-preview-toolbar__zoom {
+.#{$prefix}--preview-toolbar__zoom {
   display: flex;
   justify-content: flex-end;
   align-items: center;
