--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -15,5 +15,6 @@ $css--use-layer: true !default;
 @import 'components/document-preview/document-preview';
 @import 'components/document-preview/document-preview-toolbar';
 @import 'components/document-preview/document-preview-pdf-fallback';
+@import 'components/document-preview/document-preview-pdf-viewer';
 @import 'components/document-preview/simple-document';
 @import 'components/search-results/search-results';
