--- a/packages/discovery-styles/scss/components/search-results/search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/search-results.scss
@@ -1,12 +1,12 @@
 $result-background: white;
-// $selected-border-thickness: 0.3rem;
+$result-element-max-height: 100px;
+$result-table-fade-size: 40px;
+$result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-fade-size});
 
 .#{$prefix}--search-result {
   @include layer('overlay');
   background-color: $result-background;
   padding: $spacing-05;
-  // border-left: $selected-border-thickness solid $result-background;
-  // padding-left: calc(#{$spacing-05} - $selected-border-thickness);
   margin: $layout-01 0;
   border-radius: rem(4px);
   font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
@@ -20,7 +20,41 @@ $result-background: white;
   }
 }
 
-.#{$prefix}--search-result--body__highlights {
+.#{$prefix}--search-result__element {
+  display: flex;
+  .#{$prefix}--tile {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+.#{$prefix}--search-result__element--half {
+  .#{$prefix}--tile {
+    width: 50%;
+  }
+}
+
+.#{$prefix}--search-result__element__body {
+  flex-grow: 2;
+  max-height: $result-element-max-height;
+  overflow: hidden;
+  padding-right: $spacing-xl;
+  position: relative;
+
+  @include type-style('body-short-01');
+}
+
+.#{$prefix}--search-result__element__body--passage {
+  &:before {
+    content: open-quote;
+  }
+  &:after {
+    content: close-quote;
+  }
+}
+
+.#{$prefix}--search-result__element__body--passage__highlights {
   em {
     color: $text-04;
     background-color: $support-02;
@@ -30,38 +64,76 @@ $result-background: white;
   }
 }
 
-// .#{$prefix}--search-result--selected {
-//   border-left: 0.3rem solid $interactive-04;
-// }
+.#{$prefix}--search-result__element__body--table {
+  &:before {
+    content: '';
+    position: absolute;
+    top: $result-table-fade-offset;
+    left: 0;
+    height: $result-table-fade-size;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0), white);
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: $result-table-fade-size;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0), white);
+  }
+  table,
+  tbody,
+  tr,
+  th,
+  td {
+    border: 2px solid black;
+    text-align: left;
+  }
+  th,
+  td {
+    padding: $spacing-xs;
+  }
+}
 
-.#{$prefix}--search-result__body {
-  max-width: 560px;
+.#{$prefix}--search-result__element__body__button {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 0;
+  span {
+    flex-grow: 2;
+    padding-left: $spacing-md;
+  }
+  &:hover {
+    background-color: white;
+    text-decoration: underline;
+  }
+}
 
-  @include type-style('body-short-01');
+.bx--btn--ghost .bx--btn__icon path {
+  fill: $link-01;
 }
 
 .#{$prefix}--search-result__footer {
+  border-top: 1px solid $ui-03;
   padding-top: $spacing-05;
   color: $text-02;
-  font-size: 0.75rem;
+  font-size: $spacing-sm;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.#{$prefix}--search-result__title {
+.#{$prefix}--search-result__footer__title {
   display: flex;
   align-items: center;
-
-  &:hover {
-    text-decoration: underline;
-  }
 
   svg {
     margin-right: $spacing-03;
   }
 }
 
-.#{$prefix}--search-result__collection-name {
+.#{$prefix}--search-result__footer__collection-name {
   margin-left: $spacing-05;
 }
