feat: Add support for suggested queries (#288)
* feat: Add support for suggested queries

* Address comments Part I

* Consolidate refinement subcomponents

* No longer manage suggested_refinements separately

* Fix lint

* Fix import

* Fix storybook

* Additional cleanup

--- a/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
+++ b/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
@@ -1,20 +1,20 @@
 @import '~carbon-components/scss/components/checkbox/_checkbox.scss';
 @import '~carbon-components/scss/components/multi-select/_multi-select.scss';
 
-.#{$prefix}--refinement {
+.#{$prefix}--search-refinement {
   margin-bottom: $spacing-md;
 }
 
-.#{$prefix}--refinement_label {
+.#{$prefix}--search-refinement__refinement-label {
   color: $ui-05;
   font-size: 0.75rem;
 }
 
-.#{$prefix}--form-item.#{$prefix}--checkbox-wrapper.#{$prefix}--refinement-option {
+.#{$prefix}--form-item.#{$prefix}--checkbox-wrapper.#{$prefix}--search-refinement__refinement__option {
   margin-bottom: rem(6px);
 }
 
-.#{$prefix}--refinement-option_label {
+.#{$prefix}--search-refinement__refinement__option-label {
   @include type-style('body-short-02');
   color: $ui-05;
 }
