--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -18,3 +18,4 @@ $css--use-layer: true !default;
 @import 'components/document-preview/document-preview-pdf-viewer';
 @import 'components/document-preview/simple-document';
 @import 'components/search-results/search-results';
+@import 'components/semantic-document/semantic-document-toolbar';
