feat: chewy metadata pane (#290)
* feat: chewy metadata -- MetadataRow and PartyRow

* feat: Metadata file

* feat: story

* fix: add test and fix components to properly render

* fix: add classnames as dep

* fix: pass correct values to onLinkClick; update types

* fix: types

* fix: add css file to index

--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -19,3 +19,4 @@ $css--use-layer: true !default;
 @import 'components/document-preview/simple-document';
 @import 'components/search-results/search-results';
 @import 'components/semantic-document/semantic-document-toolbar';
+@import 'components/semantic-document/semantic-document-metadata-pane';
