feat: chewy filter panel (#294)
* feat: chewy filter panel

* test: add

* fix: add classnames pkg

--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -18,5 +18,6 @@ $css--use-layer: true !default;
 @import 'components/document-preview/document-preview-pdf-viewer';
 @import 'components/document-preview/simple-document';
 @import 'components/search-results/search-results';
+@import 'components/semantic-document/semantic-document-filter';
 @import 'components/semantic-document/semantic-document-toolbar';
 @import 'components/semantic-document/semantic-document-metadata-pane';
