feat: chewy details pane (#297)
* feat: details pane & story

* fix: set up styling

* fix: correct `link` check

* fix: add test, fix some incorrect code

--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -21,3 +21,4 @@ $css--use-layer: true !default;
 @import 'components/semantic-document/semantic-document-filter';
 @import 'components/semantic-document/semantic-document-toolbar';
 @import 'components/semantic-document/semantic-document-metadata-pane';
+@import 'components/semantic-document/semantic-document-details';
