--- a/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
+++ b/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
@@ -1,5 +1,6 @@
 @import '~carbon-components/scss/components/checkbox/_checkbox.scss';
 @import '~carbon-components/scss/components/multi-select/_multi-select.scss';
+@import '~carbon-components/scss/components/radio-button/_radio-button.scss';
 
 .#{$prefix}--search-refinement {
   margin-bottom: $spacing-md;
