feat: clear all refinements (#308)
* feat: clear all refinements

* use listbox selection clear instead of button

* reset all the filters

* remove extra div

* i18n messages file and tests

* remove internal useState added for testing

* remove console.log

* fix test description

* use camelCase for i18n strings

* remove unused imports

* replace 'it' with 'test' for consistency

* add offset to tests

* onReset -> onClear

--- a/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
+++ b/packages/discovery-styles/scss/components/search-refinements/search-refinements.scss
@@ -9,6 +9,13 @@
 .#{$prefix}--search-refinement__refinement__label {
   color: $ui-05;
   font-size: 0.75rem;
+  display: flex;
+  align-items: center;
+  height: 1.5rem;
+
+  .#{$prefix}--list-box__selection {
+    margin-left: $spacing-xs;
+  }
 }
 
 .#{$prefix}--form-item.#{$prefix}--checkbox-wrapper.#{$prefix}--search-refinement__refinement__option {
