--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -18,8 +18,10 @@ $css--use-layer: true !default;
 @import 'components/document-preview/document-preview-pdf-viewer';
 @import 'components/document-preview/simple-document';
 @import 'components/search-results/search-results';
+@import 'components/semantic-document/semantic-document-component';
 @import 'components/semantic-document/semantic-document-details';
 @import 'components/semantic-document/semantic-document-filter';
 @import 'components/semantic-document/semantic-document-metadata-pane';
 @import 'components/semantic-document/semantic-document-section';
 @import 'components/semantic-document/semantic-document-toolbar';
+@import 'components/semantic-document/semantic-document-virtual-scroll';
