--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -24,4 +24,5 @@ $css--use-layer: true !default;
 @import 'components/semantic-document/semantic-document-metadata-pane';
 @import 'components/semantic-document/semantic-document-section';
 @import 'components/semantic-document/semantic-document-toolbar';
+@import 'components/semantic-document/semantic-document-view';
 @import 'components/semantic-document/semantic-document-virtual-scroll';
