update semantic view with new DS (#312)

--- a/packages/discovery-styles/scss/components/semantic-document/_semantic-document-filter.scss
+++ b/packages/discovery-styles/scss/components/semantic-document/_semantic-document-filter.scss
@@ -2,10 +2,13 @@
 
 .#{$prefix}--semantic-doc-filter {
   .resetButton {
-    padding: 0;
+    padding: $spacing-sm;
     outline: none;
     border: none;
     background-color: initial;
+    &:focus {
+      outline: 1px solid;
+    }
   }
 
   .group-title {
