--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -26,3 +26,4 @@ $css--use-layer: true !default;
 @import 'components/semantic-document/semantic-document-toolbar';
 @import 'components/semantic-document/semantic-document-view';
 @import 'components/semantic-document/semantic-document-virtual-scroll';
+@import 'components/semantic-document/semantic-document-view';
