--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -1,4 +1,4 @@
-@import '~carbon-components/scss/components/toggle/_toggle.scss';
+@import '~carbon-components/scss/components/toggle/toggle';
 
 $result-background: white;
 $result-element-max-height: 100px;
